# adventofcode2021

./: .gitignore  README.md  adventofcode2021.sln
.github/workflows/: cpp-run.yml  dotnet-desktop.yml  dotnet-tests.yml  maven-run.yml  powershell-run.yml  python-package-conda.yml  python-run.yml  python-tests.yml
01/: sonar.py
01/cpp/: CMakeLists.txt  sonar.cpp
01/dotnet6/: sonar.cs
01/java11/: .classpath  pom.xml
01/jupyter/: sonar.ipynb
01/m68k/: README.md  probe.x68
01/psh/: sonar.ps1
01/python/: sonar.py  test.py
01/spectrum/: README.md  depths.bas  depths.zx  sonar.tzx
02/: magnitude.cs
02/dotnet6/: magnitude.cs
02/psh/: magnitude.ps1
02/python/: magnitude.py  test.py
03/dotnet6/: binary.cs
03/python/: binary.py  test.py
04/dotnet6/: Day04Input.txt  bingo.cs  bingo.csproj
04/python/: bingo.py
05/dotnet6/: Day05Input.txt  vents.cs  vents.csproj
05/python/: vents.py
06/dotnet6/: fish.cs
06/python/: fish.py
07/dotnet6/: depths.cs  depths.csproj
07/python/: depths.py
08/dotnet6/: digits.cs  digits.csproj
09/dotnet6/: Day09Input.txt  basins.cs  basins.csproj
10/dotnet6/: Day10Input.txt  brackets.cs  brackets.csproj
11/dotnet6/: Day11Input.txt  flashes.cs  flashes.csproj
12/dotnet6/: Day12Input.txt  caves.cs  caves.csproj
13/dotnet6/: Day13Input.txt  folds.cs  folds.csproj
14/dotnet6/: Day14Input.txt  polymer.cs  polymer.csproj
15/dotnet/: Day15Input.txt  chitons.csproj
15/dotnet6/: README.md  chitons.cs  tbc.cs
16/dotnet6/: PacketTree.cs  README.md  calculator.cs
17/dotnet6/: README.md  probe.cs  (+1 more)
(+32 files in other folders)
